<resources>
    <string name="app_name">HelloAnimations</string>
    <string name="basic_property_animation_demo">Basic Property Animation</string>
    <string name="play_animation">Play Animation</string>
    <string name="view_property_animation_demo">View Property Animation Demo</string>
    <string name="text_view_1">TextView 1</string>
    <string name="text_view_2">TextView 2</string>
    <string name="text_view_3">TextView 3</string>
    <string name="keyframe_demo">Keyframe Demo</string>
    <string name="default_layout_animation_demo">Default Layout Animation Demo</string>
    <string name="add_new_view">Add New View</string>
    <string name="layout_animations_demo">Layout Animations Demo</string>
    <string name="add_button">Add Button</string>
    <string name="custom_animations">Custom Animations</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="changing_in">Changing-In</string>
    <string name="changing_out">Changing-Out</string>
    <string name="view_animation_demo">View Animation Demo</string>
    <string name="run">Run</string>
    <string name="target">Target</string>
    <string name="card_flip_demo">Card Flip</string>
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="description_image_1">Image 1</string>
    <string name="zoom_demo">Zoom Demo</string>
    <string name="simple_activity_transition_demo">Simple Activity Transition</string>
    <string name="next_activity">Next Activity</string>
    <string name="activity_two">Activity Two</string>
    <string name="simple_fragment_transition_demo">Simple Fragment Transition</string>
    <string name="fragment_no">This is Fragment No.%d</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="activity_transition_demo">Activity Transition Demo</string>
    <string name="exit">Exit</string>
    <string name="shared_element_activity_demo">Shared Element Activity</string>
    <string name="shared_element_activity">Shared Element Activity</string>
    <string name="shared_element_activity_2">Shared 2</string>
    <string name="transition_name_activity_image">activity shared image element</string>
    <string name="transition_name_activity_text">activity shared text element</string>
    <string name="start_next_activity">Start Next Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_element_fragment_demo">Shared Element Fragment Demo</string>

    <string name="transition_name_fragment_image">fragment shared image %1$d-%2$d</string>
    <string name="transition_name_fragment_text">fragment shared text</string>
    <string name="android_images">Android Images</string>

</resources>
