<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shared_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ddmeng.helloanimations.transition.activity.SharedElementActivity">

    <TextView
        android:id="@+id/shared_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_element_activity" />

    <ImageView
        android:id="@+id/shared_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:src="@drawable/square"
        android:transitionName="@string/transition_name_activity_image"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/start_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_next_activity" />

</LinearLayout>
